# AFM_Data_Processeing

./: AFM TIFF to Summary Stats & Plotting Pipeline v3  AFM TIFF to Summary Stats & Plotting Pipeline v3.md  Filename Parsing Specification (Authoritative Section)  MIN POC SPEC DOC  README.md  config.example.yaml  config.mask_mpa.yaml  config.yaml  minimal_gwyddion_pipeline  pyproject.toml  requirements.txt
docs/: File Locations for Data Grouped.txt  SPEC_GAP_LIST.md  USER_GUIDE.md  change_control.md  config.md  gwyddion_ops.md  how_to_run.md  llm_agent_formats.md  method_compare_notes.md  method_compare_tables.md  method_comparison_study.md  modes.md  next_steps.md  related_tools.md  repo_data_structure_plan.md  topo_particle_deliverables_final.md  topo_particle_deliverables_template.md  topo_particle_sop.md  topo_particle_test_matrix.md
docs/Thesis/: Chapter1_Problem_Definition_DRAFT.docx  Chapter1_writing_notes.md  Chapter2_Theory_and_Foundations_DRAFT.docx  Chapter2_writing_notes.md  Chapter3_Sample_Prep_and_Fracture_DRAFT.docx  Chapter3_writing_notes.md  Chapter4_writing_notes.md  Chapter5_Statistical_Validation_Framework_DRAFT_refresh_20260306.docx  Chapter5_Statistical_Validation_Framework_DRAFT_v1alpha-20260306-1854.docx  Chapter5_section_blueprint.md  Chapter5_writing_notes.md  (+23 more)
scripts/: __init__.py  build_thesis_chapters.py  check_env.py  cli_aggregate.py  cli_aggregate_config.py  cli_plot.py  cli_summarize.py  collect_files.py  compare_methods.py  fit_particle_distributions.py  generate_modulus_baseline_report.py  generate_topo_report_docx.py  insert_thesis_reference_images.py  make_job_manifest.py  populate_chapter5.py  populate_chapter6.py  postprocess_topo_outputs.py  run_config_suite.py  run_job.py  run_pipeline.ps1  run_pygwy_job.py  topo_particle_batch.py  topo_particle_summary.py  topo_report_synthesis.py
tests/: test_pipeline.py  test_py2_runner.py
(+80 files in other folders)
